--- a/src/com/sayit/resources/layout/window/layout_chat_home.fxml
+++ b/src/com/sayit/resources/layout/window/layout_chat_home.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" style="-fx-background-color: purple;" xmlns="http://javafx.com/javafx/9"
-            xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="455.0" prefWidth="662.0" style="-fx-background-color: purple;"
+            xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.sayit.ui.frame.ChatHomeController">
     <center>
-        <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: lightblue;"
-              BorderPane.alignment="CENTER">
+        <VBox prefHeight="200.0" style="-fx-background-color: lightblue;" BorderPane.alignment="CENTER">
             <children>
                 <HBox prefHeight="61.0" prefWidth="500.0" style="-fx-background-color: lightyellow;">
                     <children>
@@ -34,7 +33,7 @@
                         </HBox>
                     </children>
                 </HBox>
-                <ListView prefHeight="283.0" prefWidth="500.0" VBox.vgrow="ALWAYS"/>
+                <ListView fx:id="messageListView" prefHeight="283.0" prefWidth="500.0" VBox.vgrow="ALWAYS"/>
                 <HBox alignment="CENTER" prefHeight="52.0" prefWidth="500.0">
                     <children>
                         <TextField HBox.hgrow="ALWAYS"/>
@@ -45,26 +44,26 @@
         </VBox>
     </center>
     <right>
-        <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: salmon;" BorderPane.alignment="CENTER">
+        <VBox prefHeight="455.0" style="-fx-background-color: salmon;" BorderPane.alignment="CENTER">
             <children>
-                <StackPane prefHeight="150.0" prefWidth="200.0">
+                <HBox alignment="CENTER">
                     <children>
-                        <Circle fill="DODGERBLUE" radius="36.0" stroke="BLACK" strokeType="INSIDE"/>
+                        <Circle fill="DODGERBLUE" radius="42.0" stroke="BLACK" strokeType="INSIDE"/>
                     </children>
-                </StackPane>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: lightgreen;">
+                </HBox>
+                <HBox alignment="CENTER" style="-fx-background-color: lightgreen;">
                     <children>
                         <Label text="Label"/>
                     </children>
                 </HBox>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: purple;">
+                <HBox alignment="CENTER" style="-fx-background-color: purple;">
                     <children>
                         <Button mnemonicParsing="false" text="Button"/>
                         <Button mnemonicParsing="false" text="Button"/>
                         <Button mnemonicParsing="false" text="Button"/>
                     </children>
                 </HBox>
-                <ListView prefHeight="407.0" prefWidth="100.0" VBox.vgrow="ALWAYS"/>
+                <ListView fx:id="historyListView" prefHeight="329.0" VBox.vgrow="ALWAYS"/>
             </children>
         </VBox>
     </right>
