--- a/src/com/sayit/resources/layout/view/view_message_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_message_cell.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.TextFlow?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0"
       style="-fx-background-color: lightgreen;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.sayit.ui.view.MessageViewController">
+      fx:controller="com.sayit.ui.control.view.MessageViewController">
     <children>
         <TextFlow>
             <children>
