--- a/src/com/sayit/resources/layout/window/layout_find_contact.fxml
+++ b/src/com/sayit/resources/layout/window/layout_find_contact.fxml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.sayit.ui.frame.FindContactController"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <HBox alignment="CENTER" prefWidth="200.0">
+            <children>
+                <Button mnemonicParsing="false" text="Button"/>
+                <TextField HBox.hgrow="ALWAYS"/>
+                <Button mnemonicParsing="false" text="Button"/>
+            </children>
+        </HBox>
+        <ListView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS"/>
+    </children>
+</VBox>
