--- a/src/com/sayit/resources/layout/view/view_contact_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_contact_cell.fxml
@@ -5,18 +5,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-      minWidth="-Infinity" prefHeight="55.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+      minWidth="-Infinity" prefHeight="55.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.sayit.ui.control.view.ContactViewController">
     <children>
-        <Circle fill="DODGERBLUE" radius="24.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Circle fx:id="roundedImage" fill="DODGERBLUE" radius="24.0" stroke="BLACK" strokeType="INSIDE"/>
         <VBox alignment="CENTER">
             <children>
-                <Label text="Label"/>
-                <Label text="Label"/>
+                <Label fx:id="nameLabel" text="Label"/>
+                <Label fx:id="descLabel" text="Label"/>
             </children>
         </VBox>
         <HBox alignment="TOP_RIGHT" HBox.hgrow="SOMETIMES">
             <children>
-                <Label text="Label"/>
+                <Label fx:id="timeLabel" text="Label"/>
             </children>
         </HBox>
     </children>
