--- a/src/com/sayit/resources/layout/window/layout_find_contact.fxml
+++ b/src/com/sayit/resources/layout/window/layout_find_contact.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-      prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+      xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.sayit.ui.control.frame.FindContactController">
     <children>
-        <HBox alignment="CENTER" prefWidth="200.0">
+        <HBox alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" text="Button"/>
-                <TextField HBox.hgrow="ALWAYS"/>
-                <Button mnemonicParsing="false" text="Button"/>
+                <Button mnemonicParsing="false" onAction="#close" text="Button"/>
+                <TextField fx:id="nameField" HBox.hgrow="ALWAYS"/>
+                <Button mnemonicParsing="false" onAction="#search" text="Button"/>
             </children>
         </HBox>
-        <ListView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS"/>
+        <ListView fx:id="contactListView" style="-fx-background-color: red;" VBox.vgrow="ALWAYS"/>
     </children>
 </VBox>
