--- a/src/com/sayit/resources/layout/window/layout_frame_start.fxml
+++ b/src/com/sayit/resources/layout/window/layout_frame_start.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <AnchorPane prefHeight="360.0" prefWidth="409.0" style="-fx-background-color: red;"/>
-    </children>
+      prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.sayit.ui.control.frame.StartFrameController">
     <padding>
         <Insets bottom="20.0" top="20.0"/>
     </padding>
+    <children>
+        <VBox fx:id="rootContainter" prefHeight="360.0" prefWidth="411.0" style="-fx-background-color: blue;"/>
+    </children>
 </HBox>
