--- a/src/com/sayit/resources/layout/window/layout_start.fxml
+++ b/src/com/sayit/resources/layout/window/layout_start.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.StartController"
+      minHeight="-Infinity"
+      minWidth="-Infinity" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/9">
     <children>
         <Label text="Label"/>
         <Label text="Label"/>
-        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+        <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <children>
-                <Button mnemonicParsing="false" text="Button"/>
+                <Button fx:id="startButton" mnemonicParsing="false" text="Button"/>
             </children>
         </HBox>
     </children>
