--- a/src/com/sayit/resources/layout/view/view_message_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_message_cell.fxml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0"
-      style="-fx-background-color: lightgreen;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.sayit.ui.control.view.MessageViewController">
+<AnchorPane prefHeight="275.0" prefWidth="367.0" style="-fx-background-color: salmon;"
+            xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.sayit.ui.control.view.MessageViewController">
     <children>
-        <TextFlow>
+        <VBox layoutX="227.0" layoutY="58.0" minHeight="-Infinity" minWidth="-Infinity" styleClass="message-box"
+              AnchorPane.rightAnchor="20.0">
             <children>
-                <Text fx:id="mainText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"/>
+                <TextFlow>
+                    <children>
+                        <Text id="text-message" fx:id="mainText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text"/>
+                    </children>
+                </TextFlow>
+                <HBox alignment="BOTTOM_RIGHT" styleClass="time-box">
+                    <children>
+                        <Label id="time-message" fx:id="timeLabel" text="12:00 AM"/>
+                    </children>
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                </HBox>
             </children>
-        </TextFlow>
-        <HBox alignment="BOTTOM_RIGHT" prefWidth="200.0">
-            <children>
-                <Label fx:id="timeLabel" text="Label"/>
-            </children>
-        </HBox>
+        </VBox>
     </children>
-</VBox>
+</AnchorPane>
