--- a/src/com/sayit/resources/layout/window/layout_edit_profile.fxml
+++ b/src/com/sayit/resources/layout/window/layout_edit_profile.fxml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
-<VBox minHeight="-Infinity" minWidth="-Infinity" styleClass="bt" xmlns="http://javafx.com/javafx/9"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.ProfileEditController">
+
+<VBox minHeight="-Infinity" minWidth="-Infinity" styleClass="root-containt" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.ProfileEditController">
     <children>
-        <Button mnemonicParsing="false" onAction="#close" text="Button"/>
-        <StackPane prefHeight="150.0" prefWidth="200.0">
+        <Button id="back-button" mnemonicParsing="false" onAction="#close" prefHeight="26.0" prefWidth="26.0" styleClass="icon-button" />
+        <StackPane prefHeight="150.0" prefWidth="200.0" styleClass="image-container">
             <children>
-                <Circle fx:id="roundImage" fill="DODGERBLUE" onMouseClicked="#getImage" radius="100.0" stroke="BLACK"
-                        strokeType="INSIDE"/>
-                <Label onMouseClicked="#getImage" text="Label" StackPane.alignment="BOTTOM_CENTER"/>
+                <Circle id="image-view" fx:id="roundImage" fill="DODGERBLUE" onMouseClicked="#getImage" radius="70.0" stroke="BLACK" strokeType="INSIDE" />
+                <Label id="add-photo-icon" onMouseClicked="#getImage" prefHeight="26.0" prefWidth="26.0" styleClass="icon-button" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="20.0" left="60.0" />
+               </StackPane.margin></Label>
             </children>
         </StackPane>
-        <Label text="Label"/>
-        <TextField fx:id="nameField"/>
-        <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <HBox styleClass="name-container">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+         <children>
+              <Label id="name-label" text="Label" />
+            <Label id="edit-icon" prefHeight="15.0" prefWidth="15.0" />
+         </children>
+      </HBox>
+        <TextField id="name-input" fx:id="nameField" promptText="Nome">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </TextField>
+        <HBox id="confirm-container" alignment="BOTTOM_RIGHT" VBox.vgrow="ALWAYS">
             <children>
-                <Button mnemonicParsing="false" onAction="#confirm" text="Button"/>
+                <Button id="confirm-button" mnemonicParsing="false" onAction="#confirm" text="OK" />
             </children>
         </HBox>
     </children>
