--- a/src/com/sayit/resources/layout/window/layout_find_contact.fxml
+++ b/src/com/sayit/resources/layout/window/layout_find_contact.fxml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-      xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.sayit.ui.control.frame.FindContactController">
-    <children>
-        <HBox alignment="CENTER">
-            <children>
-                <Button mnemonicParsing="false" onAction="#close" text="Button"/>
-                <TextField fx:id="nameField" HBox.hgrow="ALWAYS"/>
-                <Button mnemonicParsing="false" onAction="#search" text="Button"/>
-            </children>
-        </HBox>
-        <ListView fx:id="contactListView" style="-fx-background-color: red;" VBox.vgrow="ALWAYS"/>
-    </children>
-</VBox>
+
+
+<StackPane xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.FindContactController">
+   <children>
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+          <children>
+              <ListView fx:id="contactListView" VBox.vgrow="ALWAYS" />
+          </children>
+      </VBox>
+      <VBox>
+         <children>
+              <HBox alignment="CENTER" prefHeight="57.0">
+                  <children>
+                      <Button id="back-button" mnemonicParsing="false" onAction="#close" prefHeight="26.0" prefWidth="26.0" styleClass="icon-button" />
+                      <TextField fx:id="nameField" prefHeight="36.0" prefWidth="156.0" promptText="Buscar contatos" styleClass="search-input" HBox.hgrow="ALWAYS" />
+                      <Button id="search-button" mnemonicParsing="false" onAction="#search" prefHeight="26.0" prefWidth="26.0" styleClass="icon-button" />
+                  </children>
+               <styleClass>
+                  <String fx:value="app-bar" />
+                  <String fx:value="search-container" />
+               </styleClass>
+              </HBox>
+         </children>
+      </VBox>
+   </children>
+</StackPane>
