--- a/src/com/sayit/resources/stylesheet/style_message.css
+++ b/src/com/sayit/resources/stylesheet/style_message.css
@@ -1,9 +1,19 @@
+.root {
+    primary: #c2185b;
+    primary-light: #f95688;
+	primary-dark: #8b0032;
+	secondary: #ef9a9a;
+	secondary-light: #ffcccb;
+	secondary-dark: #ba6b6c;
+}
+
 .message-box {
 
 	-fx-background-radius: 10px;
 	-fx-padding: 6px 6px 6px 6px;
 	-fx-background-color: white;
-
+	-fx-effect: 
+dropshadow(gaussian, rgba(0, 0, 0, 0.24), 6, 0.3, 0, 2);
 }
 
 
@@ -29,7 +39,6 @@
 
 
 #user-message {
-
-
+	-fx-background-color: secondary-light;
 
 }
