--- a/src/com/sayit/resources/layout/window/layout_chat_home.fxml
+++ b/src/com/sayit/resources/layout/window/layout_chat_home.fxml
@@ -1,33 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="455.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.ChatHomeController">
+<BorderPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="455.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.sayit.ui.control.frame.ChatHomeController">
     <center>
         <StackPane BorderPane.alignment="CENTER">
             <children>
-                <VBox prefHeight="200.0">
-                    <children>
-                        <ListView id="message-list" fx:id="messageListView" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets top="57.0" />
-                     </VBox.margin>
-                  </ListView>
-                    </children>
-                </VBox>
+                <VBox styleClass="background-pane"/>
                 <VBox>
                     <children>
-                        <HBox prefHeight="57.0" prefWidth="414.0" styleClass="app-bar">
+                        <HBox maxHeight="-Infinity" minHeight="-Infinity" prefHeight="57.0" prefWidth="414.0"
+                              styleClass="app-bar">
                             <children>
                                 <HBox id="contact-image-container" alignment="CENTER_LEFT" prefHeight="100.0">
                                     <children>
@@ -62,14 +49,22 @@
                                 </HBox>
                             </children>
                         </HBox>
-                        <VBox fx:id="listGlassPanel" VBox.vgrow="ALWAYS" />
-                        <HBox id="input-container" alignment="BOTTOM_CENTER">
+                        <VBox fx:id="listGlassPanel" VBox.vgrow="ALWAYS">
+                            <children>
+                                <ListView id="message-list" fx:id="messageListView" VBox.vgrow="ALWAYS">
+                                    <VBox.margin>
+                                        <Insets/>
+                                    </VBox.margin>
+                                </ListView>
+                            </children>
+                        </VBox>
+                        <HBox id="input-container" alignment="BOTTOM_CENTER" VBox.vgrow="SOMETIMES">
                             <children>
                                 <TextArea id="text-input" fx:id="messageField" minHeight="-Infinity" prefHeight="25.0" promptText="Digite uma mensagem..." wrapText="true" HBox.hgrow="ALWAYS" />
                                 <Button id="send-button" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendMessage" prefHeight="26.0" prefWidth="26.0" styleClass="icon-button" />
                             </children>
                             <VBox.margin>
-                                <Insets bottom="10.0" left="20.0" right="20.0" />
+                                <Insets bottom="10.0" left="60.0" right="60.0"/>
                             </VBox.margin>
                         </HBox>
                     </children>
