--- a/src/com/sayit/resources/stylesheet/style_chat_home.css
+++ b/src/com/sayit/resources/stylesheet/style_chat_home.css
@@ -61,10 +61,14 @@ rgba(0,0,0,0.23), 12,0.7, 0, 1);
 
 }
 
-#message-list {
-	
+.background-pane {
+
 	-fx-background-image: url(../icons/doodle.png);
 	-fx-background-size: 250 250;
+}
+
+#message-list {
+	-fx-background-color: transparent;
 }
 
 #usr-name-label {
@@ -114,7 +118,7 @@ rgba(0,0,0,0.23), 12,0.7, 0, 1);
 
 #input-container {
 	-fx-background-color: white;
-	-fx-background-radius: 10px;
+	-fx-background-radius: 20px;
 	-fx-padding: 3px 10px 3px 10px;
 	-fx-border-width: 2px;
 	-fx-border-radius: 20px;
