--- a/src/com/sayit/resources/layout/view/view_contact_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_contact_cell.fxml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
 <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-      minWidth="-Infinity" prefHeight="55.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.sayit.ui.control.view.ContactViewController">
+      minWidth="-Infinity" prefHeight="55.0" styleClass="root-container" xmlns="http://javafx.com/javafx/9"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.view.ContactViewController">
     <children>
-        <Circle fx:id="roundedImage" fill="DODGERBLUE" radius="24.0" stroke="BLACK" strokeType="INSIDE"/>
-        <VBox alignment="CENTER">
+        <Circle fx:id="roundedImage" fill="DODGERBLUE" radius="23.0" stroke="BLACK" strokeType="INSIDE"
+                strokeWidth="0.0"/>
+        <VBox alignment="CENTER_LEFT" styleClass="label-container" HBox.hgrow="ALWAYS">
             <children>
-                <Label fx:id="nameLabel" text="Label"/>
-                <Label fx:id="descLabel" text="Label"/>
+                <Label fx:id="nameLabel" styleClass="name-label" text="Label"/>
+                <Label fx:id="descLabel" styleClass="desc-label" text="Label"/>
             </children>
         </VBox>
-        <HBox alignment="TOP_RIGHT" HBox.hgrow="SOMETIMES">
+        <HBox alignment="TOP_RIGHT" styleClass="time-container" HBox.hgrow="SOMETIMES">
             <children>
-                <Label fx:id="timeLabel" text="Label"/>
+                <Label fx:id="timeLabel" styleClass="desc-label" text="Label"/>
             </children>
         </HBox>
     </children>
