--- a/src/com/sayit/resources/stylesheet/style_find_contact.css
+++ b/src/com/sayit/resources/stylesheet/style_find_contact.css
@@ -52,7 +52,8 @@ url(../icons/search_black.png);
 
 
 #list-view {
-
+	-fx-padding: 3px ;
 	-fx-background-color: transparent;
+	-fx-padding: 0;
 
 }
