--- a/src/com/sayit/resources/layout/view/view_message_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_message_cell.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
-
-<VBox maxWidth="300.0" minHeight="-Infinity" minWidth="-Infinity" styleClass="message-box" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.view.MessageViewController">
+<VBox maxWidth="300.0" minHeight="-Infinity" minWidth="-Infinity" styleClass="message-box"
+      xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.sayit.ui.control.view.MessageViewController">
       <children>
           <TextFlow maxWidth="300.0">
               <children>
-                  <Text id="text-message" fx:id="mainText" strokeType="OUTSIDE" strokeWidth="0.0" text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" />
+                  <Text id="text-message" fx:id="mainText" strokeType="OUTSIDE" strokeWidth="0.0"
+                        text="Maria tenta entender que sua mãe é doida"/>
               </children>
           </TextFlow>
           <HBox alignment="BOTTOM_RIGHT" styleClass="time-box">
