--- a/src/com/sayit/resources/stylesheet/style_add_response.css
+++ b/src/com/sayit/resources/stylesheet/style_add_response.css
@@ -3,6 +3,8 @@
 
 	-fx-spacing: 20px;
 	-fx-background-color: white;
+	-fx-border-width: 0 0 2px 0;
+	-fx-border-color: black;
 }
 
 .header-container {
