--- a/src/com/sayit/resources/stylesheet/style_contact.css
+++ b/src/com/sayit/resources/stylesheet/style_contact.css
@@ -4,8 +4,11 @@
 	-fx-background-color: transparent;
 	-fx-padding: 3px 10px 3px 10px;
 	-fx-spacing: 10px;
+	-fx-border-width: 0px;
 }
-
+.root-container:selected {
+	-fx-text-fill: black;
+}
 .list-cell {
     -fx-padding: 2px ;
     -fx-background-color: transparent;
@@ -20,8 +23,11 @@
 
 
 .list-cell:selected{
-	-fx-background-color: blue;	
+	-fx-background-color: rgba(211, 211, 211, 0.6);	
 }
+
+
+
 
 .label-container {
 
@@ -36,7 +42,7 @@
 }
 
 .name-label {
-
+	-fx-text-fill: black;
 	-fx-font-weight: bold;
 	-fx-font-size: 14px;
 }	
@@ -47,3 +53,7 @@
 	-fx-font-size: 12px;
 	-fx-text-fill: gray;
 }	
+
+.line-divisor {
+	-fx-background-color: lightgray;
+}
