--- a/src/com/sayit/resources/layout/view/view_contact_cell.fxml
+++ b/src/com/sayit/resources/layout/view/view_contact_cell.fxml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-      minWidth="-Infinity" prefHeight="55.0" styleClass="root-container" xmlns="http://javafx.com/javafx/9"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.view.ContactViewController">
+<VBox xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.sayit.ui.control.view.ContactViewController">
     <children>
-        <Circle fx:id="roundedImage" fill="DODGERBLUE" radius="23.0" stroke="BLACK" strokeType="INSIDE"
-                strokeWidth="0.0"/>
-        <VBox alignment="CENTER_LEFT" styleClass="label-container" HBox.hgrow="ALWAYS">
+        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+              minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" styleClass="root-container"
+              VBox.vgrow="ALWAYS">
             <children>
-                <Label fx:id="nameLabel" styleClass="name-label" text="Label"/>
-                <Label fx:id="descLabel" styleClass="desc-label" text="Label"/>
-            </children>
-        </VBox>
-        <HBox alignment="TOP_RIGHT" styleClass="time-container" HBox.hgrow="SOMETIMES">
-            <children>
-                <Label fx:id="timeLabel" styleClass="desc-label" text="Label"/>
+                <Circle fx:id="roundedImage" fill="DODGERBLUE" radius="23.0" stroke="BLACK" strokeType="INSIDE"
+                        strokeWidth="0.0"/>
+                <VBox alignment="CENTER_LEFT" styleClass="label-container" HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label fx:id="nameLabel" styleClass="name-label" text="Label"/>
+                        <Label fx:id="descLabel" maxWidth="100.0" styleClass="desc-label"
+                               text="Adamastor caiano de sousa"/>
+                    </children>
+                </VBox>
+                <HBox alignment="TOP_RIGHT" styleClass="time-container" HBox.hgrow="SOMETIMES">
+                    <children>
+                        <Label fx:id="timeLabel" styleClass="desc-label" text="Label"/>
+                    </children>
+                </HBox>
             </children>
         </HBox>
+        <HBox maxHeight="2.0" minHeight="1.0" styleClass="line-divisor">
+            <VBox.margin>
+                <Insets left="66.0" right="10.0"/>
+            </VBox.margin>
+        </HBox>
     </children>
-</HBox>
+</VBox>
