--- a/src/com/sayit/resources/layout/window/layout_find_contact.fxml
+++ b/src/com/sayit/resources/layout/window/layout_find_contact.fxml
@@ -13,7 +13,7 @@
                 <Button id="back-button" mnemonicParsing="false" onAction="#close" prefHeight="26.0" prefWidth="26.0"
                         styleClass="icon-button"/>
                 <TextField fx:id="nameField" prefHeight="36.0" prefWidth="156.0" promptText="Buscar contatos"
-                           styleClass="search-input" HBox.hgrow="ALWAYS"/>
+                           styleClass="search-input" HBox.hgrow="ALWAYS" onAction="#search"/>
                 <Button id="search-button" mnemonicParsing="false" onAction="#search" prefHeight="26.0" prefWidth="26.0"
                         styleClass="icon-button"/>
             </children>
