--- a/src/com/sayit/resources/layout/window/layout_frame_start.fxml
+++ b/src/com/sayit/resources/layout/window/layout_frame_start.fxml
@@ -3,12 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.StartFrameController">
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="400.0" prefWidth="600.0" styleClass="root-background" xmlns="http://javafx.com/javafx/9"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.StartFrameController">
     <padding>
         <Insets bottom="20.0" top="20.0" />
     </padding>
     <children>
-        <VBox fx:id="rootContainter" prefHeight="360.0" prefWidth="411.0" />
+        <VBox fx:id="rootContainter" prefHeight="360.0" prefWidth="411.0" styleClass="content-frame"/>
     </children>
 </HBox>
