--- a/src/com/sayit/resources/layout/window/layout_start.fxml
+++ b/src/com/sayit/resources/layout/window/layout_start.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: green;" xmlns="http://javafx.com/javafx/9"
+<VBox minHeight="-Infinity" minWidth="-Infinity" styleClass="root-frame" xmlns="http://javafx.com/javafx/9"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sayit.ui.control.frame.StartController">
     <children>
-        <Label text="Say It"/>
-        <Label text="Crie um perfil para iniciar."/>
+        <Label id="start-header" styleClass="content-text" text="Say It"/>
+        <Label id="start-message" styleClass="content-text" text="Crie um perfil para iniciar."/>
         <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <children>
-                <Button fx:id="startButton" mnemonicParsing="false" text="Criar"/>
+                <Button fx:id="startButton" mnemonicParsing="false" styleClass="material-button" text="CRIAR"/>
             </children>
         </HBox>
     </children>
