--- a/src/com/sayit/resources/stylesheet/style_chat_home.css
+++ b/src/com/sayit/resources/stylesheet/style_chat_home.css
@@ -1,3 +1,10 @@
+@font-face {
+	src: url(../fonts/WorkSans-Bold.ttf);
+}
+@font-face {
+	src: url(../fonts/WorkSans-Regular.ttf);
+}
+
 
 .root {
     primary: #c2185b;
@@ -72,9 +79,9 @@ rgba(0,0,0,0.23), 12,0.7, 0, 1);
 }
 
 #usr-name-label {
+	-fx-font-family: 'Work Sans Bold';
 	-fx-text-fill: white;
 	-fx-font-size: 20px;
-	-fx-font-weight: bold;
 }
 
 #usr-name-label-container {
@@ -96,13 +103,13 @@ rgba(0,0,0,0.23), 12,0.7, 0, 1);
 }
 
 #contact-name-label {
+	-fx-font-family: 'Work Sans Bold';
 	-fx-font-size: 16px;
-	-fx-font-weight: bold;
 	-fx-text-fill: white;
 }
 
 #contact-desc-label {
-
+	-fx-font-family: 'Work Sans Regular';
 	-fx-text-fill: white;
 }
 
