--- a/src/com/sayit/resources/stylesheet/style_edit_profile.css
+++ b/src/com/sayit/resources/stylesheet/style_edit_profile.css
@@ -1,3 +1,10 @@
+@font-face {
+	src: url(../fonts/WorkSans-Bold.ttf);
+}
+@font-face {
+	src: url(../fonts/WorkSans-Light.ttf);
+}
+
 
 .root-containt {
 	primary: #c2185b;
@@ -36,10 +43,9 @@ url(../icons/arrow_back_white.png);
 
 
 #confirm-button {
-
+	-fx-font-family: 'Work Sans Bold';
 	-fx-background-color: transparent;
 	-fx-text-fill: #f95688;
-	-fx-font-weight: bold;
 	-fx-cursor: hand;
 	-fx-font-size: 18px;
 }
@@ -54,8 +60,10 @@ url(../icons/add_a_photo.png);
 
 
 #image-view {
-
+	-fx-stroke-width: 0px;
 	-fx-cursor: hand;
+	-fx-effect:
+	dropshadow(gaussian, rgba(50, 50, 50, 0.5), 8, 0.3, 1, 1);
 }
 
 .image-container {
@@ -85,17 +93,18 @@ url(../icons/add_a_photo.png);
 
 #name-label {
 
-	-fx-font-weight: bold;
-	-fx-font-size: 16px;
-
+	-fx-font-family: 'Work Sans Bold';
+	-fx-font-size: 18px;
+	-fx-cursor: hand;
 }
 
 #edit-icon {
 
 	-fx-background-image:
 url(../icons/edit_black.png);
+	-fx-cursor: hand;
 
--fx-background-color: transparent;
+	-fx-background-color: transparent;
 	-fx-background-repeat: no-repeat;
 	-fx-background-size:  stretch;
 
