--- a/src/com/sayit/resources/stylesheet/style_find_contact.css
+++ b/src/com/sayit/resources/stylesheet/style_find_contact.css
@@ -9,7 +9,7 @@
 	
 	-fx-background-color: white;
 	-fx-effect: dropshadow( gaussian, 
-rgba(0,0,0,0.23), 12,0.7, 0, 1);
+rgba(50,50,50, 0.3), 8,0.3, 0, 1);
 }
 
 .search-container {
